fix: keep replayed carriers causally exact